--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,7 +50,22 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:2.3.0"
     implementation 'com.squareup.okhttp3:logging-interceptor:4.2.1'
 
+
+    implementation "com.github.tinder.scarlet:scarlet:0.1.7"
+
+// Optional
+    implementation "com.github.tinder.scarlet:scarlet-websocket-okhttp:0.1.7"
+    implementation "com.github.tinder.scarlet:scarlet-stream-adapter-rxjava2:0.1.7"
+    implementation "com.github.tinder.scarlet:scarlet-message-adapter-moshi:0.1.7"
+    implementation "com.github.tinder.scarlet:scarlet-lifecycle-android:0.1.7"
+
+    implementation 'com.github.bishoybasily.stomp:lib:2.0.5'
+
     implementation 'com.squareup.picasso:picasso:2.71828'
+
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.5'
+
 
 
 
