--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,14 +11,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Brainstorm">
-        <activity android:name=".RoomSettings"
-            android:parentActivityName=".RoomActivity"/>
+        <activity
+            android:name=".RoomSettings"
+            android:parentActivityName=".RoomActivity" />
         <activity android:name=".ResultActivity" />
         <activity android:name=".CreateRoomActivity" />
         <activity android:name=".JoinActivity" />
-        <activity
-            android:name=".RoomActivity"
-            android:parentActivityName=".MainActivity" />
+        <activity android:name=".RoomActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
