--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Brainstorm">
+        <activity android:name=".FavoriteActivity"></activity>
         <activity
             android:name=".RoomSettings"
             android:parentActivityName=".RoomActivity" />
